--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 <footer id="footer" class="footer bg-light border fixed-bottom">
     <div class="footer-copyright text-center py-5">
-        <a class="m-2" href="https://johan372.github.io/form/policy.html">Privacy policy</a>
-        <a class="m-2" href="https://johan372.github.io/form/terms.html">Terms and conditions</a>
-        © 2020 johan372.github.io
+        <a class="m-2" href="https://lefe373.github.io/form/policy.html">Privacy policy</a>
+        <a class="m-2" href="https://lefe373.github.io/form/terms.html">Terms and conditions</a>
+        © 2020 lefe373.github.io
     </div>
 </footer>
 <script src="https://st.formdesigner.ru/js/jquery.min.js"></script>
