--- a/terms.html
+++ b/terms.html
@@ -10,7 +10,7 @@
     <br><br>
     <h2><strong>Terms and Conditions</strong></h2>
 
-    <p>Welcome to johan372.github.io!</p>
+    <p>Welcome to lefe373.github.io!</p>
 
     <p>These terms and conditions outline the rules and regulations for the use of medltd.beget.tech's Website, located
         at medltd.beget.tech.</p>
